--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,26 @@
       <scope>test</scope>
   </dependency>
 
+  <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+  </dependency>
+
+  <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.8.0</version>
+      <scope>test</scope>
+  </dependency>
+
+  <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>core-api</artifactId>
+      <version>5.2.0</version>
+    </dependency>
+
+
 
   </dependencies>
 </project>
